@@ -9,7 +9,7 @@ develop the library. -- Andriy Byelikov
 
 @author Andriy Byelikov
 
-@date 2021-09-24
+@date 2022-01-16
 
 
 - @ref CODING_STYLE.md "Coding style"
