@@ -10,7 +10,7 @@ for (int i = 1; i < argc; i++) {                                              \
     if (*argv[i] == '-') {                                                    \
         switch (*(argv[i] + 1)) {                                             \
         case 'p':                                                             \
-            flag_print = 1;                                              \
+            flag_print = 1;                                                   \
             break;                                                            \
         case 'g':                                                             \
             flag_dump_dot = 1;                                                \
@@ -20,14 +20,13 @@ for (int i = 1; i < argc; i++) {                                              \
 }
 
 #define DEFINE_OUTPUT_STATE_FUNC(SYM)                                         \
-static int flag_print = 0;                                               \
+static int flag_print = 0;                                                    \
 static int flag_dump_dot = 0;                                                 \
 static                                                                        \
 void SYM##__output_state(node_t *ref)                                         \
 {                                                                             \
-    if (flag_print) {                                                    \
-        SYM##__print(stdout, ref);                                       \
-        printf("\n");                                                         \
+    if (flag_print) {                                                         \
+        SYM##__println(stdout, ref);                                          \
     } else if (flag_dump_dot) {                                               \
         printf(#SYM "\n");                                                    \
         SYM##__dump_dot(stdout, ref);                                         \
